--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,13 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <!-- Default JDK version set for compiling -->
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- Define Java version properties for the different stages -->
+        <java.version>11</java.version> <!-- Default for the Build stage -->
     </properties>
 
     <dependencies>
@@ -27,12 +31,12 @@
 
     <build>
         <plugins>
-            <!-- Compiler plugin -->
+            <!-- Compiler plugin, used in both Build and Test stages -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>17</release>
+                    <release>${java.version}</release> <!-- Use the property defined for the Java version -->
                 </configuration>
             </plugin>
 
